RESOLVED FIXED126287
[SOUP] Return early in ResourceHandle::receivedCancellation if the load has already cancelled
https://bugs.webkit.org/show_bug.cgi?id=126287
Summary [SOUP] Return early in ResourceHandle::receivedCancellation if the load has a...
Carlos Garcia Campos
Reported 2013-12-30 03:41:30 PST
This situation can happen when using the network process, because the ReceivedCancellation message can be received when the resource loader has already been removed, but the authentication challenge still has a reference to the ResourceHandleClient. $ WEBKIT_USE_NETWORK_PROCESS=1 Programs/WebKit2APITests/TestAuthentication /webkit2/WebKitWebView/authentication-request: OK /webkit2/WebKitWebView/authentication-cancel: OK /webkit2/WebKitWebView/authentication-load-cancelled: (process:1716): libsoup-CRITICAL **: soup_session_unpause_message: assertion 'item != NULL' failed OK /webkit2/WebKitWebView/authentication-failure: OK /webkit2/WebKitWebView/authentication-no-credential: OK /webkit2/WebKitWebView/authentication-storage: (process:1843): libsoup-CRITICAL **: soup_session_unpause_message: assertion 'item != NULL' failed
Attachments
Patch (1.70 KB, patch)
2013-12-30 03:45 PST, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2013-12-30 03:45:06 PST
Carlos Garcia Campos
Comment 2 2013-12-31 00:31:03 PST
Note You need to log in before you can comment on or make changes to this bug.