[SOUP] Return early in ResourceHandle::receivedCancellation if the load has already cancelled https://bugs.webkit.org/show_bug.cgi?id=126287

Reviewed by Martin Robinson.

This situation can happen when using the network process, because
the ReceivedCancellation message can be received when the resource
loader has already been removed, but the authentication challenge
still has a reference to the ResourceHandleClient.

* platform/network/soup/ResourceHandleSoup.cpp:
(WebCore::ResourceHandle::receivedCancellation):

Canonical link: https://commits.webkit.org/144260@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161179 268f45cc-cd09-0410-ab3c-d52691b4dbfc